<resources>
    <string name="app_name">ReminderSample</string>

    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="time">Time</string>
    <string name="startTimeInfo">This is the start time of the Event. Like you have an appointment at this time</string>
    <string name="endTimeInfo">This is the end time of the Event. For e.g your appointment must end 2 hours after the
        start.
    </string>
    <string name="addReminder">Want to add reminder?</string>
    <string name="addReminderInfo">You will get the notification of the event before 30 mins of start time</string>
    <string name="save">Save</string>

    <string name="addReminderButton">Add Reminder</string>
    <string name="reminders">Reminders</string>
    <string name="pressButtonForReminder">Click on the below button to add a Reminder. Each click will add single
        reminder. Reminders are\n
        <b>30 min, 20 min, 10 min, 5 min</b>
    </string>
</resources>
