<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/title"
                android:textColor="#000" tools:ignore="Autofill"/>

        <EditText
                android:layout_marginTop="10dp"
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/description"
                android:textColor="#000" tools:ignore="Autofill"/>

        <EditText
                android:layout_marginTop="10dp"
                android:id="@+id/startTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:focusable="false"
                android:longClickable="false"
                android:hint="@string/time"
                android:textColor="#000"
                tools:ignore="Autofill"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#636363"
                android:text="@string/startTimeInfo"/>

        <EditText
                android:layout_marginTop="10dp"
                android:id="@+id/endTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:focusable="false"
                android:longClickable="false"
                android:hint="@string/time"
                android:textColor="#000"
                tools:ignore="Autofill"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#636363"
                android:text="@string/endTimeInfo"/>

        <CheckBox
                android:layout_marginTop="10dp"
                android:id="@+id/reminder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addReminder"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#636363"
                android:text="@string/addReminderInfo"/>

        <Button
                android:layout_marginTop="10dp"
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"/>

    </LinearLayout>
</layout>