<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
>

    <data>
        <variable
                name="viewModel"
                type="com.remindersample.ui.eventDetails.EventViewModel"/>
    </data>
    <LinearLayout android:layout_width="match_parent"
                  android:background="#99000000"
                  android:padding="5dp"
                  android:layout_height="match_parent"
                  android:orientation="vertical">

        <LinearLayout android:layout_width="match_parent"
                      android:orientation="vertical"
                      android:background="#fff"
                      android:padding="10dp"
                      android:layout_margin="5dp"
                      android:layout_height="wrap_content">

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textColor="#000"
                      android:textStyle="bold"
                      android:text="@string/title"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textColor="#000"
                      android:layout_marginTop="5dp"
                      android:text="@{viewModel.event.title}"/>
        </LinearLayout>

        <LinearLayout android:layout_width="match_parent"
                      android:orientation="vertical"
                      android:background="#fff"
                      android:layout_margin="5dp"
                      android:padding="10dp"
                      android:layout_height="wrap_content">

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textColor="#000"
                      android:textStyle="bold"
                      android:text="@string/description"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textColor="#000"
                      android:layout_marginTop="5dp"
                      android:text="@{viewModel.event.desc}"/>

        </LinearLayout>

        <LinearLayout android:layout_width="match_parent"
                      android:orientation="vertical"
                      android:background="#fff"
                      android:layout_margin="5dp"
                      android:padding="10dp"
                      android:layout_height="wrap_content">

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textColor="#000"
                      android:textStyle="bold"
                      android:text="@string/time"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textColor="#000"
                      android:layout_marginTop="5dp"
                      android:text="@{viewModel.event.time}"/>

        </LinearLayout>

        <LinearLayout android:layout_width="match_parent"
                      android:orientation="vertical"
                      android:background="#fff"
                      android:layout_margin="5dp"
                      android:padding="10dp"
                      android:layout_height="wrap_content">

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textColor="#000"
                      android:textStyle="bold"
                      android:text="@string/reminders"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textColor="#000"
                      android:layout_marginTop="5dp"
                      android:text="@{viewModel.reminders.size > 0 ? viewModel.reminders.toString() : @string/pressButtonForReminder}"/>

        </LinearLayout>

        <Button
                android:id="@+id/addReminder"
                android:layout_width="match_parent"
                android:text="@string/addReminderButton"
                android:layout_height="wrap_content"/>

    </LinearLayout>
</layout>